segundo commit del tp 3
Autor: Abel N Penhaloza

--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -6,10 +6,70 @@
     <title>Document</title>
 </head>
 <body>
+	<!-- Inicio del header -->
 	<header>
-		nav
+		<h1>Bienvenido a Programacion Visual</h1>
+		
 	</header>
+	<!-- Inicio del del nav -->
+	<nav>
+		<ul>
+			<li><a href="https://www.fi.unju.edu.ar/">Fi Unju</a></li>
+			<li><a href="https://virtual.unju.edu.ar/">Aula Virtual</a></li>
+			<li><a href="https://github.com/AbelNPenhaloza/trabajo_practico_3/tree/main/tp3_Pe%C3%B1alozaAbel">Repositorio GitHub</a></li>
+				
+		</ul>
+	</nav>
 	<main>
+		<!-- Inicio de la primera seccion -->
+		<section id="inicio">
+			<h2>Titulo de la Seccion 1</h2>
+			<p>Materia de segundo anio de la carrera Analista Programador Universitario</p>
+			<h3>Docentes</h3>
+			<ol>
+				<li>Vega Ariel</li>
+				<li>Apaza Carolina</li>
+				<li>Sosa Gustavo</li>
+				<li>Rodriguez Juan</li>
+			</ol>
+		</section>
+		<!-- Inicio de la segunda seccion -->
+		<section id="seccion2">
+			 <table>
+				  <thead>
+				    <tr>
+				      <th>Name</th>
+				      <th>Instrument</th>
+				    </tr>
+				  </thead>
+				  <tbody>
+				    <tr>
+				      <td>John Lennon</td>
+				      <td>Rhythm Guitar</td>
+				    </tr>
+				    <tr>
+				      <td>Paul McCartney</td>
+				      <td>Bass</td>
+				    </tr>
+				    <tr>
+				      <td>George Harrison</td>
+				      <td>Lead Guitar</td>
+				    </tr>
+				    <tr>
+				      <td>Ringo Starr</td>
+				      <td>Drums</td>
+				    </tr>
+				  </tbody>
+				  
+			</table>
+		</section>
+		<!-- Inicio del aside de la pagina -->
+		<aside>
+			<h3>Enlaces Adicionales</h3>
+			<p>Contenido de Amigos</p>
+			<img src="../static/img/img1.png" alt="">
+			
+		</aside>
 	</main>
 	<footer>
 	</footer>
