Commit 3 del tp 3
Descripcion: Se creo la estructura del tp 3
Autor: Abel N Penhaloza

--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 		<ul>
 			<li><a href="https://www.fi.unju.edu.ar/">Fi Unju</a></li>
 			<li><a href="https://virtual.unju.edu.ar/">Aula Virtual</a></li>
-			<li><a href="https://github.com/AbelNPenhaloza/trabajo_practico_3/tree/main/tp3_Pe%C3%B1alozaAbel">Repositorio GitHub</a></li>
+			<li><a href="https://github.com/AbelNPenhaloza/trabajo_practico_3.git">Repositorio GitHub</a></li>
 				
 		</ul>
 	</nav>
