Trabajando en completar el contenido de la pagina index. Autor: Abel N Peñaloza

--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -14,17 +14,21 @@
 	<!-- Inicio del del nav -->
 	<nav>
 		<ul>
-			<li><a href="https://www.fi.unju.edu.ar/">Fi Unju</a></li>
-			<li><a href="https://virtual.unju.edu.ar/">Aula Virtual</a></li>
-			<li><a href="https://github.com/AbelNPenhaloza/trabajo_practico_3.git">Repositorio GitHub</a></li>
+			<li><a href="https://www.fi.unju.edu.ar/" target="_blank">Fi Unju</a></li>
+			<li><a href="https://virtual.unju.edu.ar/" target="_blank">Aula Virtual</a></li>
+			<li><a href="https://github.com/AbelNPenhaloza/trabajo_practico_3.git" target="_blank">Repositorio GitHub TP 3</a></li>
 				
 		</ul>
 	</nav>
 	<main>
 		<!-- Inicio de la primera seccion -->
 		<section id="inicio">
-			<h2>Titulo de la Seccion 1</h2>
-			<p>Materia de segundo anio de la carrera Analista Programador Universitario</p>
+			<h2>Objetivo de la Materia</h2>
+			<p>Materia de segundo año de la carrera Analista Programador Universitario.
+			 Donde el alumno aprendera a desarrollar aplicaciones web de gestión de tareas
+			 (como un gestor de tareas personales o de proyectos) utilizando Java con Spring Boot,
+			 que incluya diferentes funcionalidades.</p>
+			 
 			<h3>Docentes</h3>
 			<ol>
 				<li>Vega Ariel</li>
@@ -35,29 +39,45 @@
 		</section>
 		<!-- Inicio de la segunda seccion -->
 		<section id="seccion2">
-			 <table>
+			 <table border="1">
 				  <thead>
+				  	<h2>Bibliografia basica obligatoria</h2>
 				    <tr>
-				      <th>Name</th>
-				      <th>Instrument</th>
+				      <th>Titulo</th>
+				      <th>Autores</th>
+				      <th>Editorial</th>
+				      <th>Anio de<br>edicion</th>
+				      <th>Ejemplares<br>disponibles</th>
 				    </tr>
 				  </thead>
 				  <tbody>
 				    <tr>
-				      <td>John Lennon</td>
-				      <td>Rhythm Guitar</td>
+				      <td>Orientacion a Objetos con JAVA y UML</td>
+				      <td>Carlos Fontella</td>
+				      <td>Prentice Hall</td>
+				      <td>2009</td>
+				      <td>2</td>
 				    </tr>
 				    <tr>
-				      <td>Paul McCartney</td>
-				      <td>Bass</td>
+				      <td>Historias de Usuario una visión pragmática</td>
+				      <td>Jorge Abad</td>
+				      <td></td>
+				      <td>2018</td>
+				      <td>-</td>
 				    </tr>
 				    <tr>
-				      <td>George Harrison</td>
-				      <td>Lead Guitar</td>
+				      <td>Como programar JAVA séptima edición</td>
+				      <td>Deitel Deitel</td>
+				      <td>Pearson Education</td>
+				      <td>2008</td>
+				      <td>1</td>
 				    </tr>
 				    <tr>
-				      <td>Ringo Starr</td>
-				      <td>Drums</td>
+				      <td>Estructura de Datos en JAVA</td>
+				      <td>Luis Joyanes Aguilar</td>
+				      <td>Mc Graw Hill</td>
+				      <td>2007</td>
+				      <td>4</td>
 				    </tr>
 				  </tbody>
 				  
@@ -72,6 +92,7 @@
 		</aside>
 	</main>
 	<footer>
+		<p>©Copyright 2050 de Abel_Dev. Todos los derechos revertidos.</p>
 	</footer>
     
 </body>
