Se continua trabajando en el contenido
Autor: Abel N Peñaloza

--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
 		<section id="seccion2">
 			 <table border="1">
 				  <thead>
-				  	<h2>Bibliografia basica obligatoria</h2>
+				  	<h2>Bibliografía Básica Obligatoria</h2>
 				    <tr>
 				      <th>Titulo</th>
 				      <th>Autores</th>
@@ -52,7 +52,7 @@
 				  </thead>
 				  <tbody>
 				    <tr>
-				      <td>Orientacion a Objetos con JAVA y UML</td>
+				      <td>Orientación a Objetos con JAVA y UML</td>
 				      <td>Carlos Fontella</td>
 				      <td>Prentice Hall</td>
 				      <td>2009</td>
@@ -86,14 +86,30 @@
 		<!-- Inicio del aside de la pagina -->
 		<aside>
 			<h3>Enlaces Adicionales</h3>
-			<p>Contenido de Amigos</p>
+			<p> Paginas Web donde puedes encontrar información sobre los temas de la materia.</p>
 			<img src="../static/img/img1.png" alt="">
-			
+			<div>
+	          <h4>Contenido de Apoyo</h4>
+	          <ul>
+	            <li><a href="#">Algoritmos</a></li>
+	            <li><a href="#">Java</a></li>
+	            <li><a href="#">Programación Fincional</a></li>
+	            <li><a href="#">Spring Boot</a></li>
+	          </ul>
+	        </div>
 		</aside>
 	</main>
 	<footer>
-		<p>©Copyright 2050 de Abel_Dev. Todos los derechos revertidos.</p>
-	</footer>
+		<div>
+          <h4>Redes sociales</h4>
+          <div class="social-links">
+            <a href="#">Youtube</a>
+            <a href="#">Twitter</a>
+            <a href="#">Instragram</a>
+            <a href="#"></i>LinkedIn</a>
+          </div>
+          <p>&copy;2024 Abel_Dev | Todos los derechos reservados</p>
+    </footer>
     
 </body>
 </html>
