se agrego los link en el aside
Autor: Abel N Peñaloza

--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -91,10 +91,10 @@
 			<div>
 	          <h4>Contenido de Apoyo</h4>
 	          <ul>
-	            <li><a href="#">Algoritmos</a></li>
-	            <li><a href="#">Java</a></li>
-	            <li><a href="#">Programación Fincional</a></li>
-	            <li><a href="#">Spring Boot</a></li>
+	            <li><a href="https://www.youtube.com/watch?v=ha5AQpxA24Q" target="_blank">Algoritmos</a></li>
+	            <li><a href="https://www.youtube.com/watch?v=BdNqW63ZaB0" target="_blank">Java</a></li>
+	            <li><a href="https://www.youtube.com/watch?v=Gg6wPcfiZm8&list=PLjJ8HhsSfskiDEwgfyF9EznmrSyEukcJa" target="_blank">Programación Funcional</a></li>
+	            <li><a href="https://www.youtube.com/watch?v=5rNk7m_zlAg" target="_blank">Spring Boot</a></li>
 	          </ul>
 	        </div>
 		</aside>
