--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -38,6 +38,58 @@
 			</ol>
 		</section>
 		<!-- Inicio de la segunda seccion -->
+		<section>
+			<h3>UNIDAD I: Lenguaje Java</h3>
+			<p>
+			   Tipos de datos primitivos y complejos. Estructuras de datos. Operadores. Uso de Strings, Arreglos y
+			   Colecciones. Conceptos generales de la Programación Orientada a Objetos. Clases y objetos: Definición y
+	           Ejemplos
+	        </p>
+	        
+	        <h3>UNIDAD II: Introduccion a Spring Boot</h3>
+	        <p>
+	           Arquitectura de aplicaciones Web. Herramientas necesarias. ¿Qué es un Framework? Evolución de Spring.
+			   Módulos disponibles. Arquitectura de una aplicación con Spring. Creación de proyectos con Spring Boot en
+			   un IDE. Concepto de Controladores. Gestión de peticiones con RequestMapping. Introducción a HTML.
+			   Estructura de un documento HTML. Introducción a CCS. Creación de un sitio Web HTML.
+			</p>
+			
+	        <h3>UNIDAD III: Gestion de Dependencias y Versionamiento</h3>
+        	<p>
+        	   Gestión de Proyectos mediante un sistema de control de versionamiento. Git: tareas de versionamiento con
+               Git. Integración de Git con un IDE.
+               Maven: descripción y utilidad. Descripción de la estructura de un proyecto Maven. Gestión de dependencias,
+               repositorio Maven. Uso de arquetipos Maven. Spring boot y Maven.
+        	</p>
+        	
+        	<h3>UNIDAD IV: Spring Boot MVC</h3>
+        	<p>
+        	   Thymeleaf como motor de templates. Creación de un proyecto MVC con Spring Boot y thymeleaf.
+               Configuración de propiedades mediante el fichero properties o yml. Introducción a Bootstrap: concepto e
+               implementación de componentes. Navbar. Grillas con Bootstrap. Cards. Buttons. Breadscrumb.	
+        	</p>
+        	
+        	<h3>UNIDAD V: Clases de negocio</h3>
+        	<p>
+        	  Creación de clases de negocio. Clases de Servicio. Concepto de Inyección de dependencias. Vinculación entre
+              clases de negocio con Servicios. Agregar objetos al modelo (Model). Renderizado de la UI con Thymeleaf.	
+        	</p>
+        	
+        	<h3>UNIDAD IV: Persistencia de Objetos</h3>
+        	<p>
+        	  Conceptos básicos de persistencia de objetos. Introducción a JPA. Conexión a un Motor de Base de Datos.
+              Configuración de JPA con Spring Boot. CrudRepository, JpaRepository, Query Methods, Relaciones. Sistema
+              de trazas: configuración con Spring Boot.
+        	</p>
+        	
+        	<h3>UNIDAD VII: Manejo de formularios</h3>
+        	<p>
+        	  Gestión de eventos. Búsquedas. CRUD de clases de negocio. Operaciones de negocio. Uso de @Query para
+              consultas personalizadas. Integración con componentes Bootstrap y thymeleaf. Integración de conceptos en
+              una aplicación robusta.
+        	</p>
+		</section>
+		<!-- Inicio de la tercera seccion -->
 		<section id="seccion2">
 			 <table border="1">
 				  <thead>
@@ -87,7 +139,7 @@
 		<aside>
 			<h3>Enlaces Adicionales</h3>
 			<p> Paginas Web donde puedes encontrar información sobre los temas de la materia.</p>
-			<img src="../static/img/img1.png" alt="">
+			<img src="../static/img/img1.png" alt="logo de spring boot">
 			<div>
 	          <h4>Contenido de Apoyo</h4>
 	          <ul>
