Se coloco un titulo en la seccion 2
Autor: Abel N Peñaloza

--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -39,6 +39,7 @@
 		</section>
 		<!-- Inicio de la segunda seccion -->
 		<section>
+			<h2>Programación Visual APU 2008 San Salvador de Jujuy - Año 2024</h2>
 			<h3>UNIDAD I: Lenguaje Java</h3>
 			<p>
 			   Tipos de datos primitivos y complejos. Estructuras de datos. Operadores. Uso de Strings, Arreglos y
