--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -161,6 +161,7 @@
             <a href="#">Instragram</a>
             <a href="#"></i>LinkedIn</a>
           </div>
+          <p>email: abelnpenaloza@gmail.com</p>
           <p>&copy;2024 Abel_Dev | Todos los derechos reservados</p>
     </footer>
     
