Se modificaron algunos puntos del tp.
Autor: Abel N Peñaloza

--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML - Basico</title>
 </head>
 <body>
 	<!-- Inicio del header -->
@@ -22,7 +22,7 @@
 	</nav>
 	<main>
 		<!-- Inicio de la primera seccion -->
-		<section id="inicio">
+		<section>
 			<h2>Objetivo de la Materia</h2>
 			<p>Materia de segundo año de la carrera Analista Programador Universitario.
 			 Donde el alumno aprendera a desarrollar aplicaciones web de gestión de tareas
@@ -91,8 +91,8 @@
         	</p>
 		</section>
 		<!-- Inicio de la tercera seccion -->
-		<section id="seccion2">
-			 <table border="1">
+		<section>
+			 <table>
 				  <thead>
 				  	<h2>Bibliografía Básica Obligatoria</h2>
 				    <tr>
