Commit en redes sociales se agrego twitch.
Autor: Abel Nestor Peñaloza

--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -160,6 +160,7 @@
             <a href="#">Twitter</a>
             <a href="#">Instragram</a>
             <a href="#"></i>LinkedIn</a>
+            <a href="#"></i>Twitch</a>
           </div>
           <p>email: abelnpenaloza@gmail.com</p>
           <p>&copy;2024 Abel_Dev | Todos los derechos reservados</p>
