Commit armando el formulario y estilos.css
Autor: Abel N Penhaloza

--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Estilos Generales-->
+    <link rel="stylesheet" href="../static/css/estilos.css">
+    <link rel="shortcut icon" href="../static/img/favicon.ico" type="image/x-icon">
     <title>HTML - Basico</title>
 </head>
 <body>
 	<!-- Inicio del header -->
-	<header>
+	<header id="encabezado">
 		<h1>Bienvenido a Programacion Visual</h1>
 		
 	</header>
 	<!-- Inicio del del nav -->
-	<nav>
+	<nav class="menu-navegacion">
 		<ul>
-			<li><a href="https://www.fi.unju.edu.ar/" target="_blank">Fi Unju</a></li>
-			<li><a href="https://virtual.unju.edu.ar/" target="_blank">Aula Virtual</a></li>
-			<li><a href="https://github.com/AbelNPenhaloza/trabajo_practico_3.git" target="_blank">Repositorio GitHub TP 3</a></li>
+			<li class="enlace-menu"><a href="https://www.fi.unju.edu.ar/" target="_blank">Fi Unju</a></li>
+			<li class="enlace-menu"><a href="https://virtual.unju.edu.ar/" target="_blank">Aula Virtual</a></li>
+			<li class="enlace-menu"><a href="https://github.com/AbelNPenhaloza/trabajo_practico_3.git" target="_blank">Repositorio GitHub TP 3</a></li>
 				
 		</ul>
 	</nav>
-	<main>
+	<main class="contenido-principal">
 		<!-- Inicio de la primera seccion -->
-		<section>
+		<section class="primera-seccion">
 			<h2>Objetivo de la Materia</h2>
 			<p>Materia de segundo año de la carrera Analista Programador Universitario.
 			 Donde el alumno aprendera a desarrollar aplicaciones web de gestión de tareas
