--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Abel N Peñaloza">
+    <meta name="description" content="Web de Practica de HTML y CSS">
+    <!--Reset de estilos-->
+    <link rel="stylesheet" href="../static/css/reset.css">
     <!--Estilos Generales-->
     <link rel="stylesheet" href="../static/css/estilos.css">
     <link rel="shortcut icon" href="../static/img/favicon.ico" type="image/x-icon">
@@ -155,15 +159,15 @@
 	        </div>
 		</aside>
 	</main>
-	<footer>
+	<footer id="pie-pagina">
 		<div>
           <h4>Redes sociales</h4>
           <div class="social-links">
-            <a href="#">Youtube</a>
-            <a href="#">Twitter</a>
-            <a href="#">Instragram</a>
-            <a href="#"></i>LinkedIn</a>
-            <a href="#"></i>Twitch</a>
+            <a class="enlace-footer" href="#">Youtube</a>
+            <a class="enlace-footer" href="#">Twitter</a>
+            <a class="enlace-footer" href="#">Instragram</a>
+            <a class="enlace-footer" href="#"></i>LinkedIn</a>
+            <a class="enlace-footer" href="#"></i>Twitch</a>
           </div>
           <p>email: abelnpenaloza@gmail.com</p>
           <p>&copy;2024 Abel_Dev | Todos los derechos reservados</p>
