--- a/tp3_PeñalozaAbel/src/main/resources/static/css/estilos.css
+++ b/tp3_PeñalozaAbel/src/main/resources/static/css/estilos.css
@@ -1,1 +1,27 @@
 @charset "UTF-8";
+
+
+
+
+
+/* Otros estilos necesarios para el formulario de cliente */
+.formulario-cliente {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f4f4f4;
+}
+
+
+
+.social-links a {
+    color: white;
+    margin-right: 10px;
+}
+/* Estilos para el pie de página */
+#pie-pagina {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
