--- a/tp3_PeñalozaAbel/src/main/resources/templates/form-cliente.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/form-cliente.html
@@ -15,193 +15,245 @@
     </title>
   </head>
   <body>
-    <header>
+
+    <!-- Inicio del header -->
+    <header id="encabezado">
+      <img src="../static/img/logo.svg" alt="Logo Spring Booot">
+      <h1>
+        Bienvenido a Programacion Visual
+      </h1>
+      <!-- Inicio del del nav -->
+      <nav class="menu-navegacion">
+        <ul>
+          <li class="enlace-menu">
+          <a href="index.html">
+            Inicio
+          </a>
+        </li>	
+          <li class="enlace-menu">
+          <a href="https://www.fi.unju.edu.ar/" target="_blank">
+            Fi Unju
+          </a>
+        </li>
+        <li class="enlace-menu">
+        <a href="https://virtual.unju.edu.ar/" target="_blank">
+          Aula Virtual
+        </a>
+      </li>
+      <li class="enlace-menu">
+      <a href="https://github.com/AbelNPenhaloza/trabajo_practico_3.git" target="_blank">
+        Repositorio GitHub TP 3
+      </a>
+    </li>
+	<li class="enlace-menu">
+          <a href="form-cliente.html" target="_blank">
+            Registro
+          </a>
+        </li>
+  </ul>
+</nav>
+</header>
+<main>
+  <section>
+    <form class="formulario-cliente" action="#" method="post">
       <h1>
         REGISTRO DE CLIENTES
       </h1>
-    </header>
-    <main>
-      <section>
-        <form class="formulario-cliente" action="#" method="post">
-          <label for="dni">
-            DNI:
-          </label>
-          <input type="number" id="dni" name="dni" required>
-
-          <label for="nombres">
-            Nombres:
-          </label>
-          <input type="text" id="nombres" name="nombres" required>
-
-          <label for="apellidos">
-            Apellidos:
-          </label>
-          <input type="text" id="apellidos" name="apellidos" required>
-
-          <label for="fecha_nacimiento">
-            Fecha de Nacimiento:
-          </label>
-          <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" required>
-
-          <label>
-            Género:
-          </label>
-          <input type="radio" id="genero_femenino" name="genero" value="femenino" required>
-          <label for="genero_femenino">
-            Femenino
-          </label>
-          <input type="radio" id="genero_masculino" name="genero" value="masculino" required>
-          <label for="genero_masculino">
-            Masculino
-          </label>
-          <input type="radio" id="genero_otro" name="genero" value="otro" required>
-          <label for="genero_otro">
-            Otro
-          </label>
-
-          <label for="email">
-            Correo Electrónico:
-          </label>
-          <input type="email" id="email" name="email" required>
-
-          <label for="domicilio">
-            Domicilio:
-          </label>
-          <input type="text" id="domicilio" name="domicilio" required>
-
-          <label for="provincia">
-            Provincia:
-          </label>
-          <select id="provincia" name="provincia" required>
-            <option value="">
-              Seleccione una provincia
-            </option>
-            <option value="Buenos Aires">
-              Buenos Aires
-            </option>
-            <option value="Catamarca">
-              Catamarca
-            </option>
-            <option value="Chaco">
-              Chaco
-            </option>
-            <option value="Chubut">
-              Chubut
-            </option>
-            <option value="Córdoba">
-              Córdoba
-            </option>
-            <option value="Corrientes">
-              Corrientes
-            </option>
-            <option value="Entre Ríos">
-              Entre Ríos
-            </option>
-            <option value="Formosa">
-              Formosa
-            </option>
-            <option value="Jujuy">
-              Jujuy
-            </option>
-            <option value="La Pampa">
-              La Pampa
-            </option>
-            <option value="La Rioja">
-              La Rioja
-            </option>
-            <option value="Mendoza">
-              Mendoza
-            </option>
-            <option value="Misiones">
-              Misiones
-            </option>
-            <option value="Neuquén">
-              Neuquén
-            </option>
-            <option value="Río Negro">
-              Río Negro
-            </option>
-            <option value="Salta">
-              Salta
-            </option>
-            <option value="San Juan">
-              San Juan
-            </option>
-            <option value="San Luis">
-              San Luis
-            </option>
-            <option value="Santa Cruz">
-              Santa Cruz
-            </option>
-            <option value="Santa Fe">
-              Santa Fe
-            </option>
-            <option value="Santiago del Estero">
-              Santiago del Estero
-            </option>
-            <option value="Tierra del Fuego">
-              Tierra del Fuego
-            </option>
-            <option value="Tucumán">
-              Tucumán
-            </option>
-          </select>
-
-          <label for="telefono">
-            Número de Teléfono Celular:
-          </label>
-          <input type="tel" id="telefono" name="telefono" required>
-
-          <label>
-            Categorías de Interés:
-          </label>
-          <input type="checkbox" id="categoria1" name="categorias1" value="categoria1">
-          <label for="categoria1">
-            Categoría 1
-          </label>
-          <input type="checkbox" id="categoria2" name="categorias2" value="categoria2">
-          <label for="categoria2">
-            Categoría 2
-          </label>
-          <!-- Agrega más categorías según necesites -->
-
-          <label for="sugerencias">
-            Sugerencias para la Empresa:
-          </label>
-          <textarea id="sugerencias" name="sugerencias" rows="4" cols="50">
-          </textarea>
-
-          <label for="password">
-            Contraseña:
-          </label>
-          <input type="password" id="password" name="password" required>
-
-          <input type="checkbox" id="terminos" name="terminos" value="aceptado" required>
-          <label for="terminos">
-            Acepto los Términos y Condiciones
-          </label>
-
-          <input type="checkbox" id="info_empresa" name="info_empresa" value="aceptado" required>
-          <label for="info_empresa">
-            Acepto recibir información relativa a la empresa
-          </label>
-
-          <input type="submit" value="Enviar">
-        </form>
-      </section>
-    </main>
-    <footer id="pie-pagina">
-		<div>
-          <h4>Redes sociales</h4>
-          <div class="social-links">
-            <a class="enlace-footer" href="#">Youtube</a>
-            <a class="enlace-footer" href="#">Twitter</a>
-            <a class="enlace-footer" href="#">Instragram</a>
-            <a class="enlace-footer" href="#"></i>LinkedIn</a>
-            <a class="enlace-footer" href="#"></i>Twitch</a>
-          </div>
-          <p>email: abelnpenaloza@gmail.com</p>
-          <p>&copy;2024 Abel_Dev | Todos los derechos reservados</p>
-    </footer>
-  </body>
+      <label for="dni">
+        DNI:
+      </label>
+      <input type="number" id="dni" name="dni" required>
+    </br>
+    <label for="nombres">
+      Nombres:
+    </label>
+    <input type="text" id="nombres" name="nombres" required>
+  </br>
+  <label for="apellidos">
+    Apellidos:
+  </label>
+  <input type="text" id="apellidos" name="apellidos" required>
+</br>
+<label for="fecha_nacimiento">
+  Fecha de Nacimiento:
+</label>
+<input type="date" id="fecha_nacimiento" name="fecha_nacimiento" required>
+</br>
+<label>
+  Género:
+</label>
+<input type="radio" id="genero_femenino" name="genero" value="femenino" required>
+<label for="genero_femenino">
+  Femenino
+</label>
+<input type="radio" id="genero_masculino" name="genero" value="masculino" required>
+<label for="genero_masculino">
+  Masculino
+</label>
+<input type="radio" id="genero_otro" name="genero" value="otro" required>
+<label for="genero_otro">
+  Otro
+</label>
+</br>
+<label for="email">
+  Correo Electrónico:
+</label>
+<input type="email" id="email" name="email" required>
+</br>
+<label for="domicilio">
+  Domicilio:
+</label>
+<input type="text" id="domicilio" name="domicilio" required>
+</br>
+<label for="provincia">
+  Provincia:
+</label>
+<select id="provincia" name="provincia" required>
+  <option value="">
+    Seleccione una provincia
+  </option>
+  <option value="Buenos Aires">
+    Buenos Aires
+  </option>
+  <option value="Catamarca">
+    Catamarca
+  </option>
+  <option value="Chaco">
+    Chaco
+  </option>
+  <option value="Chubut">
+    Chubut
+  </option>
+  <option value="Córdoba">
+    Córdoba
+  </option>
+  <option value="Corrientes">
+    Corrientes
+  </option>
+  <option value="Entre Ríos">
+    Entre Ríos
+  </option>
+  <option value="Formosa">
+    Formosa
+  </option>
+  <option value="Jujuy">
+    Jujuy
+  </option>
+  <option value="La Pampa">
+    La Pampa
+  </option>
+  <option value="La Rioja">
+    La Rioja
+  </option>
+  <option value="Mendoza">
+    Mendoza
+  </option>
+  <option value="Misiones">
+    Misiones
+  </option>
+  <option value="Neuquén">
+    Neuquén
+  </option>
+  <option value="Río Negro">
+    Río Negro
+  </option>
+  <option value="Salta">
+    Salta
+  </option>
+  <option value="San Juan">
+    San Juan
+  </option>
+  <option value="San Luis">
+    San Luis
+  </option>
+  <option value="Santa Cruz">
+    Santa Cruz
+  </option>
+  <option value="Santa Fe">
+    Santa Fe
+  </option>
+  <option value="Santiago del Estero">
+    Santiago del Estero
+  </option>
+  <option value="Tierra del Fuego">
+    Tierra del Fuego
+  </option>
+  <option value="Tucumán">
+    Tucumán
+  </option>
+</select>
+</br>
+<label for="telefono">
+  Número de Teléfono Celular:
+</label>
+<input type="tel" id="telefono" name="telefono" pattern="[0-9]{3}-[0-9]"patrequired>
+</br>
+<label>
+  Categorías de Interés:
+</label>
+<input type="checkbox" id="categoria1" name="categorias" value="categoria1">
+<label for="categoria1">
+  Categoría 1
+</label>
+<input type="checkbox" id="categoria2" name="categorias" value="categoria2">
+<label for="categoria2">
+  Categoría 2
+</label>
+<!-- Agrega más categorías según necesites -->
+</br>
+<label for="sugerencias">
+  Sugerencias para la Empresa:
+</label>
+<textarea id="sugerencias" name="sugerencias" rows="4" cols="50">
+</textarea>
+</br>
+<label for="password">
+  Contraseña:
+</label>
+<input type="password" id="password" name="password" required>
+</br>
+<input type="checkbox" id="terminos" name="terminos" value="aceptado" required>
+<label for="terminos">
+  Acepto los Términos y Condiciones
+</label>
+</br>
+<input type="checkbox" id="info_empresa" name="info_empresa" value="aceptado" required>
+<label for="info_empresa">
+  Acepto recibir información relativa a la empresa
+</label>
+</br>
+<input type="submit" value="Enviar">
+</form>
+</section>
+</main>
+<footer id="pie-pagina">
+  <div>
+    <h4>
+      Redes sociales
+    </h4>
+    <div class="social-links">
+      <a class="enlace-footer" href="#">
+        Youtube
+      </a>
+      <a class="enlace-footer" href="#">
+        Twitter
+      </a>
+      <a class="enlace-footer" href="#">
+        Instragram
+      </a>
+      <a class="enlace-footer" href="#">
+      </i>
+      LinkedIn
+    </a>
+    <a class="enlace-footer" href="#">
+    </i>
+    Twitch
+  </a>
+</div>
+<a class="mail-footer" href="mailto:abelnpenaloza@gmail.com">Mandar un correo electronico</a>
+<p>
+  &copy;2024 Abel_Dev | Todos los derechos reservados
+</p>
+</footer>
+</body>
 </html>
