--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -304,7 +304,7 @@
         Youtube
       </a>
       <a class="enlace-footer" href="#">
-        X
+        Twitter (x)
       </a>
       <a class="enlace-footer" href="#">
         Instragram
