commit se aplico text-decoration en el aside
Autor Abel N Penhaloza

--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -272,19 +272,19 @@
 		      <ul>
 		        <li>
 		        <img src="../static/img/Programacion-Java.png" alt="logo de spring boot">
-		        <a href="https://www.youtube.com/watch?v=ha5AQpxA24Q" target="_blank">
+		        <a class="link-aside" href="https://www.youtube.com/watch?v=ha5AQpxA24Q" target="_blank">
 		          Algoritmos
 		        </a>
 		      </li>
 		      <li>
 		    <img src="../static/img/programacion-funcional.jpg" alt="logo de spring boot">
-		    <a href="https://www.youtube.com/watch?v=Gg6wPcfiZm8&list=PLjJ8HhsSfskiDEwgfyF9EznmrSyEukcJa" target="_blank">
+		    <a class="link-aside" href="https://www.youtube.com/watch?v=Gg6wPcfiZm8&list=PLjJ8HhsSfskiDEwgfyF9EznmrSyEukcJa" target="_blank">
 		      Programación Funcional
 		    </a>
 		  </li>
 		  <li>
 		  <img src="../static/img/what-is-spring-boot.jpg" alt="logo de spring boot">
-		  <a href="https://www.youtube.com/watch?v=5rNk7m_zlAg" target="_blank">
+		  <a class="link-aside" href="https://www.youtube.com/watch?v=5rNk7m_zlAg" target="_blank">
 		    Spring Boot
 		  </a>
 		</li>
