--- a/tp3_PeñalozaAbel/src/main/resources/static/css/estilos.css
+++ b/tp3_PeñalozaAbel/src/main/resources/static/css/estilos.css
@@ -84,9 +84,11 @@ body {
     margin: 20px;
     border: 2px solid #fff;
     padding: 10px;
-    
+    text-decoration:none;
 }
-
+.link-aside{
+	text-decoration: none;
+}
 /* Estilos para la imagen dentro del aside */
 aside img {
     max-width: 100%; /* La imagen se ajusta automáticamente a su tamaño */
