Commit se corrigio el codigo html del index y form-cliente
Autor: Abel N Peñaloza

--- a/tp3_PeñalozaAbel/src/main/resources/templates/index.html
+++ b/tp3_PeñalozaAbel/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es-AR">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Abel N Peñaloza">
@@ -10,97 +10,59 @@
     <!--Estilos Generales-->
     <link rel="stylesheet" href="../static/css/estilos.css">
     <link rel="shortcut icon" href="../static/img/favicon.ico" type="image/x-icon">
-    <title>
-      HTML - Basico
-    </title>
-  </head>
-  <body>
+    <title>HTML - Basico</title>
+</head>
+<body>
+  
     <!-- Inicio del header -->
     <header id="encabezado">
+     
       <img src="../static/img/logo.svg" alt="Logo Spring Booot">
-      <h1>
-        Bienvenido a Programacion Visual
-      </h1>
+      <h1>Bienvenido a Programacion Visual</h1>
       <!-- Inicio del del nav -->
+      
       <nav class="menu-navegacion">
         <ul>
-          <li class="enlace-menu">
-          <a href="index.html">
-            Inicio
-          </a>
-        </li>
-        <li class="enlace-menu">
-        <a href="https://www.fi.unju.edu.ar/" target="_blank">
-          Fi Unju
-        </a>
-      </li>
-      <li class="enlace-menu">
-      <a href="https://virtual.unju.edu.ar/" target="_blank">
-        Aula Virtual
-      </a>
-    </li>
-    <li class="enlace-menu">
-    <a href="https://github.com/AbelNPenhaloza/trabajo_practico_3.git" target="_blank">
-      Repositorio GitHub TP 3
-    </a>
-  </li>
-  <li class="enlace-menu">
-  <a href="form-cliente.html" target="_blank">
-    Registro
-  </a>
-</li>
-</ul>
-</nav>
+          <li class="enlace-menu"><a href="index.html">Inicio</a></li>
+          <li class="enlace-menu"><a href="https://www.fi.unju.edu.ar/" target="_blank">Fi Unju</a></li>
+      	  <li class="enlace-menu"><a href="https://virtual.unju.edu.ar/" target="_blank">Aula Virtual</a></li>
+    	  <li class="enlace-menu"><a href="https://github.com/AbelNPenhaloza/trabajo_practico_3.git" 
+    	  	target="_blank">Repositorio GitHub TP 3</a></li>
+  		  <li class="enlace-menu"><a href="form-cliente.html" target="_blank">Registro</a></li>
+		</ul>
+	  </nav>
 
-</header>
+	</header>
 	<main class="contenido-principal">
-		<div class="contenedor-seccion-aside">	
-		  <!-- Inicio de la primera seccion -->
-		  <div class="contenedor-seccion">
-		    <section class="primera-seccion">
-		      <h2>
-		        Objetivo de la Materia
-		      </h2>
-		      <p>
-		        Materia de segundo año de la carrera Analista Programador Universitario. Donde el alumno aprendera a desarrollar
-		        aplicaciones web de gestión de tareas (como un gestor de tareas personales o de proyectos) utilizando Java con
-		        Spring Boot, que incluya diferentes funcionalidades.
-		      </p>
+		  <div class="contenedor-seccion-aside">
+		    <!-- Inicio de la primera seccion -->
+		    <div class="contenedor-seccion">
+		      <section class="primera-seccion">
+		        <h2>Objetivo de la Materia</h2>
+		        <p>
+		          Materia de segundo año de la carrera Analista Programador Universitario. Donde el alumno aprendera a
+		          desarrollar aplicaciones web de gestión de tareas (como un gestor de tareas personales o de proyectos)
+		          utilizando Java con Spring Boot, que incluya diferentes funcionalidades.
+		        </p>
 		
-		      <h3>
-		        Docentes
-		      </h3>
-		      <ol>
-		        <li>
-		        Vega Ariel
-		      </li>
-		      <li>
-		      Apaza Carolina
-		    </li>
-		    <li>
-		    Sosa Gustavo
-		  </li>
-		  <li>
-		  Rodriguez Juan
-		</li>
-		</ol>
-		</section>
+		        <h3>Docentes</h3>
+		        <ol>
+		          <li>Vega Ariel</li>
+		          <li>Apaza Carolina</li>
+		      	  <li>Sosa Gustavo</li>
+		  		  <li>Rodriguez Juan</li>
+				</ol>
+			  </section>
 		<!-- Inicio de la segunda seccion -->
 		<section class="segunda-seccion">
-		  <h2>
-		    Programación Visual APU 2008 San Salvador de Jujuy - Año 2024
-		  </h2>
-		  <h3>
-		    UNIDAD I: Lenguaje Java
-		  </h3>
+		  <h2>Programación Visual APU 2008 San Salvador de Jujuy - Año 2024</h2>
+		  <h3>UNIDAD I: Lenguaje Java</h3>
 		  <p>
 		    Tipos de datos primitivos y complejos. Estructuras de datos. Operadores. Uso de Strings, Arreglos y Colecciones.
 		    Conceptos generales de la Programación Orientada a Objetos. Clases y objetos: Definición y Ejemplos
 		  </p>
 		
-		  <h3>
-		    UNIDAD II: Introduccion a Spring Boot
-		  </h3>
+		  <h3>UNIDAD II: Introduccion a Spring Boot</h3>
 		  <p>
 		    Arquitectura de aplicaciones Web. Herramientas necesarias. ¿Qué es un Framework? Evolución de Spring. Módulos
 		    disponibles. Arquitectura de una aplicación con Spring. Creación de proyectos con Spring Boot en un IDE. Concepto de
@@ -108,44 +70,34 @@
 		    Introducción a CCS. Creación de un sitio Web HTML.
 		  </p>
 		
-		  <h3>
-		    UNIDAD III: Gestion de Dependencias y Versionamiento
-		  </h3>
+		  <h3>UNIDAD III: Gestion de Dependencias y Versionamiento</h3>
 		  <p>
 		    Gestión de Proyectos mediante un sistema de control de versionamiento. Git: tareas de versionamiento con Git.
 		    Integración de Git con un IDE. Maven: descripción y utilidad. Descripción de la estructura de un proyecto Maven.
 		    Gestión de dependencias, repositorio Maven. Uso de arquetipos Maven. Spring boot y Maven.
 		  </p>
 		
-		  <h3>
-		    UNIDAD IV: Spring Boot MVC
-		  </h3>
+		  <h3>UNIDAD IV: Spring Boot MVC</h3>
 		  <p>
 		    Thymeleaf como motor de templates. Creación de un proyecto MVC con Spring Boot y thymeleaf. Configuración de
 		    propiedades mediante el fichero properties o yml. Introducción a Bootstrap: concepto e implementación de
 		    componentes. Navbar. Grillas con Bootstrap. Cards. Buttons. Breadscrumb.
 		  </p>
 		
-		  <h3>
-		    UNIDAD V: Clases de negocio
-		  </h3>
+		  <h3>UNIDAD V: Clases de negocio</h3>
 		  <p>
 		    Creación de clases de negocio. Clases de Servicio. Concepto de Inyección de dependencias. Vinculación entre clases
 		    de negocio con Servicios. Agregar objetos al modelo (Model). Renderizado de la UI con Thymeleaf.
 		  </p>
 		
-		  <h3>
-		    UNIDAD IV: Persistencia de Objetos
-		  </h3>
+		  <h3>UNIDAD IV: Persistencia de Objetos</h3>
 		  <p>
 		    Conceptos básicos de persistencia de objetos. Introducción a JPA. Conexión a un Motor de Base de Datos.
 		    Configuración de JPA con Spring Boot. CrudRepository, JpaRepository, Query Methods, Relaciones. Sistema de trazas:
 		    configuración con Spring Boot.
 		  </p>
 		
-		  <h3>
-		    UNIDAD VII: Manejo de formularios
-		  </h3>
+		  <h3>UNIDAD VII: Manejo de formularios</h3>
 		  <p>
 		    Gestión de eventos. Búsquedas. CRUD de clases de negocio. Operaciones de negocio. Uso de @Query para consultas
 		    personalizadas. Integración con componentes Bootstrap y thymeleaf. Integración de conceptos en una aplicación
@@ -157,174 +109,98 @@
 		  <table>
 		
 		    <thead>
-		      <h2>
-		        Bibliografía Básica Obligatoria
-		      </h2>
+		      <h2>Bibliografía Básica Obligatoria</h2>
 		      <tr>
-		        <th>
-		          Titulo
-		        </th>
-		        <th>
-		          Autores
-		        </th>
-		        <th>
-		          Editorial
-		        </th>
-		        <th>
-		          Anio de
-		          <br>
-		          edicion
-		        </th>
-		        <th>
-		          Ejemplares
-		          <br>
-		          disponibles
-		        </th>
+		        <th>Titulo</th>
+		        <th>Autores</th>
+		        <th>Editorial</th>
+		        <th>Año de<br>edicion</th>
+		        <th>Ejemplares<br>disponibles</th>
 		      </tr>
 		    </thead>
 		    <tbody>
 		      <tr>
-		        <td>
-		          Orientación a Objetos con JAVA y UML
-		        </td>
-		        <td>
-		          Carlos Fontella
-		        </td>
-		        <td>
-		          Prentice Hall
-		        </td>
-		        <td>
-		          2009
-		        </td>
-		        <td>
-		          2
-		        </td>
+		        <td>Orientación a Objetos con JAVA y UML</td>
+		        <td>Carlos Fontella</td>
+		        <td>Prentice Hall</td>
+		        <td>2009</td>
+		        <td>2</td>
 		      </tr>
 		      <tr>
-		        <td>
-		          Historias de Usuario una visión pragmática
-		        </td>
-		        <td>
-		          Jorge Abad
-		        </td>
-		        <td>
-		        </td>
-		        <td>
-		          2018
-		        </td>
-		        <td>
-		          -
-		        </td>
+		        <td>Historias de Usuario una visión pragmática</td>
+		        <td>Jorge Abad</td>
+		        <td>-</td>
+		        <td>2018</td>
+		        <td>-</td>
 		      </tr>
 		      <tr>
-		        <td>
-		          Como programar JAVA séptima edición
-		        </td>
-		        <td>
-		          Deitel Deitel
-		        </td>
-		        <td>
-		          Pearson Education
-		        </td>
-		        <td>
-		          2008
-		        </td>
-		        <td>
-		          1
-		        </td>
+		        <td>Como programar JAVA séptima edición</td>
+		        <td>Deitel Deitel</td>
+		        <td>Pearson Education</td>
+		        <td>2008</td>
+		        <td>1</td>
 		      </tr>
 		      <tr>
-		        <td>
-		          Estructura de Datos en JAVA
-		        </td>
-		        <td>
-		          Luis Joyanes Aguilar
-		        </td>
-		        <td>
-		          Mc Graw Hill
-		        </td>
-		        <td>
-		          2007
-		        </td>
-		        <td>
-		          4
-		        </td>
+		        <td>Estructura de Datos en JAVA</td>
+		        <td>Luis Joyanes Aguilar</td>
+		        <td>Mc Graw Hill</td>
+		        <td>2007</td>
+		        <td>4</td>
 		      </tr>
 		    </tbody>
 		
 		  </table>
 		</section>
 		</div>
-		  <!-- Inicio del aside de la pagina -->
-		  <div class="contenedor-aside">
+		<!-- Inicio del aside de la pagina -->
+		<div class="contenedor-aside">
 		  <aside>
-		    <h3>
-		      Enlaces Adicionales
-		    </h3>
-		    <p>
-		      Paginas Web donde puedes encontrar información sobre los temas de la materia.
-		    </p>
+		    <h3>Enlaces Adicionales</h3>
+		    <p>Paginas Web donde puedes encontrar información sobre los temas de la materia.</p>
 		    <img src="../static/img/duke.jpg" alt="logo de spring boot">
 		    <div>
-		      <h4>
-		        Contenido de Apoyo
-		      </h4>
+		      <h4>Contenido de Apoyo</h4>
 		      <ul>
 		        <li>
-		        <img src="../static/img/Programacion-Java.png" alt="logo de spring boot">
-		        <a class="link-aside" href="https://www.youtube.com/watch?v=ha5AQpxA24Q" target="_blank">
-		          Algoritmos
-		        </a>
-		      </li>
-		      <li>
-		    <img src="../static/img/programacion-funcional.jpg" alt="logo de spring boot">
-		    <a class="link-aside" href="https://www.youtube.com/watch?v=Gg6wPcfiZm8&list=PLjJ8HhsSfskiDEwgfyF9EznmrSyEukcJa" target="_blank">
-		      Programación Funcional
-		    </a>
-		  </li>
-		  <li>
-		  <img src="../static/img/what-is-spring-boot.jpg" alt="logo de spring boot">
-		  <a class="link-aside" href="https://www.youtube.com/watch?v=5rNk7m_zlAg" target="_blank">
-		    Spring Boot
-		  </a>
-		</li>
-		</ul>
+		        	<img src="../static/img/Programacion-Java.png" alt="logo de spring boot">
+		        	<a class="link-aside" href="https://www.youtube.com/watch?v=ha5AQpxA24Q" target="_blank">
+		         	 Algoritmos
+		       		</a>
+		        </li>
+		     	<li>
+		    	  <img src="../static/img/programacion-funcional.jpg" alt="logo de spring boot">
+		   		  <a class="link-aside" href="https://www.youtube.com/watch?v=Gg6wPcfiZm8&list=PLjJ8HhsSfskiDEwgfyF9EznmrSyEukcJa"
+		         	 target="_blank">Programación Funcional</a>
+		   		</li>
+		        <li>
+		  		  <img src="../static/img/what-is-spring-boot.jpg" alt="logo de spring boot">
+		  		  <a class="link-aside" href="https://www.youtube.com/watch?v=5rNk7m_zlAg" target="_blank">
+		   		   Spring Boot
+		   		  </a>
+		 		</li>
+			  </ul>
+		   </div>
+	     </aside>
 		</div>
-		</aside>
-		  </div>
-		</div>
-	</main>
-	<footer id="pie-pagina">
+	</div>
+ </main>
+ <footer id="pie-pagina">
   <div>
-    <h4>
-      Redes sociales
-    </h4>
+    <h4>Redes sociales</h4>
     <div class="social-links">
-      <a class="enlace-footer" href="#">
-        Youtube
-      </a>
-      <a class="enlace-footer" href="#">
-        Twitter (x)
-      </a>
-      <a class="enlace-footer" href="#">
-        Instragram
-      </a>
-      <a class="enlace-footer" href="#">
-      
-      LinkedIn
+		<a class="enlace-footer" href="#">Youtube</a>
+		<a class="enlace-footer" href="#">Twitter (x)</a>
+		<a class="enlace-footer" href="#">Instragram</a>
+		<a class="enlace-footer" href="#">LinkedIn</a>
+		<a class="enlace-footer" href="#">Twitch</a>
+    </div>
+    <a class="mail-footer" href="mailto:abelnpenaloza@gmail.com">
+      Mandar un correo electronico
     </a>
-    <a class="enlace-footer" href="#">
-    
-    Twitch
-  </a>
-</div>
-<a class="mail-footer" href="mailto:abelnpenaloza@gmail.com">
-  Mandar un correo electronico
-</a>
-<p>
-  &copy;2024 Abel_Dev | Todos los derechos reservados
-</p>
-</footer>
+    <p>
+      &copy;2024 Abel_Dev | Todos los derechos reservados
+    </p>
+  </footer>
 
 </body>
 </html>
